# MotionPaper

./: CMakeLists.txt
app/: main.cpp
core/backend/: BackendManager.cpp  BackendManager.h
core/settings/: SettingsManager.cpp  SettingsManager.h
daemon/: livepaperd.cpp  main.cpp
daemon/daemon/: LivePaperDaemon.cpp  LivePaperDaemon.h
daemon/ipc/: DBusServer.cpp  DBusServer.h
daemon/renderer/: MpvRenderer.cpp  MpvRenderer.h  Renderer.h
daemon/wayland/: WaylandLayer.cpp  WaylandLayer.h
qml/: Main.qml
qml/components/: PlayerControls.qml  PreviewPanel.qml  SearchBar.qml  SettingsPage.qml  Sidebar.qml  StatusBar.qml  WallpaperCard.qml  WallpaperGrid.qml
qml/daemon/: WallpaperWindow.qml
